Fixed active menu item on mobile

--- a/app/styles/partials/_navbar.scss
+++ b/app/styles/partials/_navbar.scss
@@ -32,19 +32,11 @@
         bottom: -15px;
         left: 23px;
       }
-      &.active:after{
-        color:$appleGreen;
-        z-index: 0;
-      }
       > a{
         color: white;
         line-height: 2em;
       }
       &:hover{
-        &:after{
-          color:$appleGreen;
-          z-index: -1;
-        }
         a{
           background-color: transparent;
           color: white;
@@ -86,6 +78,16 @@
     margin-left: 15px;
     li{
       text-align:left;
+      &.active:after{
+        color:$appleGreen !important;
+        z-index: 0;
+      }
+      &:hover{
+        &:after{
+          color:$appleGreen !important;
+          z-index: -1;
+        }
+      }
     }
   }
 }
